--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<span style="-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background: linear-gradient(135deg, #42d392, #647eff);">Your Text Here</span>
 </head>
 <body>
 
