--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<span style="-webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-background: linear-gradient(135deg, #42d392, #647eff);">Your Text Here</span>
+<title>bIRC</title>
 </head>
 <body>
 
